--- a/easy_funding/public/index.html
+++ b/easy_funding/public/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Easy Funding</title>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script src="js/jquery.js"></script>
     <script src="js/angular/angular.min.js"></script>
     <script src="js/angular/angular-route.min.js"></script>
@@ -16,6 +17,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="js/progress-circle.js"></script>
     <script src="js/imageupload.js" type="text/javascript"></script>
+    <script src="js/geolocation.js"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -25,7 +27,7 @@
     <!-- Latest compiled and minified JavaScript -->
 </head>
 
-<body class="loading">
+<body class="loading" onload="initialize()">
     <div class="page-wrap">
         <nav class="navbar navbar-default navbar-fixed-top no-margin" role="navigation">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -44,6 +46,7 @@
     <span class="fa fa-search"></span>
 </button> -->
                     <a class="navbar-brand" href="#/" ng-click="cause_list_close()"> <span>EASY</span> FUNDING </a>
+                    <span id="geo" style="color:#fff;"></span>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <span></span>
@@ -189,6 +192,7 @@
 </body>
 <script src="js/app.js"></script>
 <script src="js/controller.js"></script>
+
 <script>
 $(window).ready(function() {
 
@@ -210,7 +214,4 @@ $(window).ready(function() {
 
 });
 </script>
-<style>
-</style>
-
 </html>
