--- a/easy_funding/public/index.html
+++ b/easy_funding/public/index.html
@@ -17,7 +17,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="js/progress-circle.js"></script>
     <script src="js/imageupload.js" type="text/javascript"></script>
-    <script src="js/geolocation.js"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -45,12 +44,11 @@
                     <!--                     <button type="button" class="navbar-toggle btn-primary" data-toggle="collapse" data-target=".navbar-ex1-collapse1">
     <span class="fa fa-search"></span>
 </button> -->
-                    <a class="navbar-brand" href="#/" ng-click="cause_list_close()"> <span>EASY</span> FUNDING </a>
-                    <span id="geo" style="color:#fff;"></span>
+                    <a class="navbar-brand inline-block" href="#/" ng-click="cause_list_close()"> <span>EASY</span> FUNDING </a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <span></span>
-                <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <div class="collapse navbar-collapse navbar-ex1-collapse no-boxshadow no-border">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#/" ng-mouseover="cause_list_close()" data-toggle="collapse" data-target=".navbar-collapse.in">HOME</a></li>
                         <li><a href="" class="get_cause hidden-xs" ng-mouseover="cause_list = !cause_list">CAUSES</a></li>
@@ -74,6 +72,7 @@
                         <li><a href="#/signin" ng-mouseover="cause_list_close()" data-toggle="collapse" data-target=".navbar-collapse.in">SIGN IN</a></li>
                         <li class="visible-xs"><a href="#/dashboard" data-toggle="collapse" data-target=".navbar-collapse.in">My Campaigns</a></li>
                         <li class="visible-xs"><a href="#/settings" data-toggle="collapse" data-target=".navbar-collapse.in">Settings</a></li>
+                        <li class="visible-xs"><a href="#/account_status" data-toggle="collapse" data-target=".navbar-collapse.in">Account Status</a></li>
                         <li class="hidden-xs">
                             <!-- <form action="" autocomplete="on">
                                 <input id="search" name="search" type="text" class="search1" placeholder="What i am looking for ?">
@@ -83,8 +82,8 @@
                         </li>
                     </ul>
                 </div>
-                <div class="collapse navbar-collapse navbar-ex1-collapse-form">
-                    <form class="navbar-form navbar-left visible-xs" role="search">
+                <div class="collapse navbar-collapse navbar-ex1-collapse-form no-boxshadow no-border">
+                    <form class="navbar-form navbar-left visible-xs no-boxshadow no-border" role="search">
                         <div class="input-group form-group">
                             <input type="text" class="form-control no-radius" placeholder="Search here" aria-describedby="basic-addon1">
                             <span class="input-group-addon no-radius" id="basic-addon1" data-toggle="collapse" data-target=".navbar-collapse.in"><i class="fa fa-search text-white"></i></span>
@@ -158,7 +157,13 @@
                 <div class="clearfix"></div>
                 <hr>
                 <div class="col-xs-12 no-padding">
-                    <div class="col-xs-12 col-sm-6">
+                    <div class="col-xs-12 col-sm-4">
+                        <ul class="list-inline social-list">
+                            <li>Your Location : </li>
+                            <li id="geo"></li>
+                        </ul>
+                    </div>
+                    <div class="col-xs-12 col-sm-4">
                         <ul class="list-inline">
                             <li>Supported Countries :</li>
                             <li>USA</li>
@@ -166,7 +171,7 @@
                             <li>INDIA</li>
                         </ul>
                     </div>
-                    <div class="col-xs-12 col-sm-6 text-right">
+                    <div class="col-xs-12 col-sm-4 text-right">
                         <ul class="list-inline social-list">
                             <li>Follow Us : </li>
                             <li>
@@ -192,7 +197,7 @@
 </body>
 <script src="js/app.js"></script>
 <script src="js/controller.js"></script>
-
+<script src="js/geolocation.js"></script>
 <script>
 $(window).ready(function() {
 
@@ -214,4 +219,7 @@ $(window).ready(function() {
 
 });
 </script>
+<style>
+</style>
+
 </html>
