--- a/easy_funding/public/index.html
+++ b/easy_funding/public/index.html
@@ -73,6 +73,13 @@
                         <li class="visible-xs"><a href="#/dashboard" data-toggle="collapse" data-target=".navbar-collapse.in">My Campaigns</a></li>
                         <li class="visible-xs"><a href="#/settings" data-toggle="collapse" data-target=".navbar-collapse.in">Settings</a></li>
                         <li class="visible-xs"><a href="#/account_status" data-toggle="collapse" data-target=".navbar-collapse.in">Account Status</a></li>
+                        <li class="visible-xs"><a href="#/howitworks" data-toggle="collapse" data-target=".navbar-collapse.in">How it Works</a></li>
+                        <li class="visible-xs"><a href="#/howitworks" data-toggle="collapse" data-target=".navbar-collapse.in">Success Stories</a></li>
+                        <li class="visible-xs"><a href="#/howitworks" data-toggle="collapse" data-target=".navbar-collapse.in">Questions</a></li>
+                        <li class="visible-xs"><a href="#/howitworks" data-toggle="collapse" data-target=".navbar-collapse.in">About Us</a></li>
+                        <li class="visible-xs"><a href="#/howitworks" data-toggle="collapse" data-target=".navbar-collapse.in">Pricing</a></li>
+                        <li class="visible-xs"><a href="#/howitworks" data-toggle="collapse" data-target=".navbar-collapse.in">Safety &amp; Security</a></li>
+                        <li class="visible-xs"><a href="#/howitworks" data-toggle="collapse" data-target=".navbar-collapse.in">Contact Us</a></li>
                         <li class="hidden-xs">
                             <!-- <form action="" autocomplete="on">
                                 <input id="search" name="search" type="text" class="search1" placeholder="What i am looking for ?">
@@ -111,7 +118,7 @@
         </nav>
         <div class="container-fluid" id="">
             <div class="row">
-                <ng-view></ng-view>
+                <ng-view autoscroll="true"></ng-view>
             </div>
         </div>
     </div>
@@ -120,68 +127,80 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-3">
                     <Ul class="list-unstyled">
-                        <li>some text</li>
-                        <li>some text</li>
-                        <li>some text</li>
-                        <li>some text</li>
-                        <li>some text</li>
+                        <li>
+                            <h4>GET STARTED</h4>
+                        </li>
+                        <li><a href="#/howitworks">How it Works</a></li>
+                        <li><a href="">Success Stories </a></li>
+                        <li><a href="">Common Questions</a></li>
+                        <li><a href="">Ask a Question</a></li>
+                        <li><a href="#/signup">Sign Up Now</a></li>
                     </Ul>
                 </div>
                 <div class="col-xs-12 col-sm-3">
                     <Ul class="list-unstyled">
-                        <li>some text</li>
-                        <li>some text</li>
-                        <li>some text</li>
-                        <li>some text</li>
-                        <li>some text</li>
+                        <li>
+                            <h4>LEARN MORE</h4>
+                        </li>
+                        <li><a href="">Watch the Video</a></li>
+                        <li><a href="">Easyfunding Reviews </a></li>
+                        <li><a href="">Pricing &amp; Fees</a></li>
+                        <li><a href="">Fundraising Ideas</a></li>
+                        <li><a href="">We're Hiring!</a></li>
                     </Ul>
                 </div>
                 <div class="col-xs-12 col-sm-3">
                     <Ul class="list-unstyled">
-                        <li>some text</li>
-                        <li>some text</li>
-                        <li>some text</li>
-                        <li>some text</li>
-                        <li>some text</li>
+                        <li>
+                            <h4>MAJOR EVENTS</h4>
+                        </li>
+                        <li><a href="">Nepal Earthquake</a></li>
+                        <li><a href="">Ferguson Rebuilds</a></li>
+                        <li><a href="">Philippine Typhoon</a></li>
+                        <li><a href="">Colorado Flooding</a></li>
+                        <li><a href="">Oklahoma Tornadoes</a></li>
                     </Ul>
                 </div>
                 <div class="col-xs-12 col-sm-3 ">
                     <Ul class="list-unstyled">
-                        <li>some text</li>
-                        <li>some text</li>
-                        <li>some text</li>
-                        <li>some text</li>
-                        <li>some text</li>
+                        <li>
+                            <h4>CONNECT WITH US</h4>
+                        </li>
+                        <li><a href="">Ask a Question</a></li>
+                        <li><a href="">Common Questions </a></li>
+                        <li><a href="">Help Center</a></li>
+                        <li><a href="">Meet the Team</a></li>
+                        <li><a href="">Media Center</a></li>
                     </Ul>
                 </div>
                 <div class="clearfix"></div>
                 <hr>
                 <div class="col-xs-12 no-padding">
-                    <div class="col-xs-12 col-sm-4">
+                    <div class="col-xs-12 col-sm-3">
                         <ul class="list-inline social-list">
                             <li>Your Location : </li>
                             <li id="geo"></li>
                         </ul>
                     </div>
-                    <div class="col-xs-12 col-sm-4">
+                    <div class="col-xs-12 col-sm-6">
                         <ul class="list-inline">
-                            <li>Supported Countries :</li>
+                            <li>Supported Currencies :</li>
                             <li>USA</li>
                             <li>CANADA</li>
                             <li>INDIA</li>
                         </ul>
                     </div>
-                    <div class="col-xs-12 col-sm-4 text-right">
+                    <div class="col-xs-12 col-sm-3">
                         <ul class="list-inline social-list">
                             <li>Follow Us : </li>
                             <li>
-                                <button type="submit" class="btn btn-facebook no-radius"><span class="fa fa-facebook fa-1x"></span></button>
+                                <span class="fa fa-facebook fa-1x"></span>
                             </li>
                             <li>
-                                <button type="submit" class="btn btn-info no-radius"><span class="fa fa-twitter fa-1x"></span></button>
+                                <span class="fa fa-twitter fa-1x"></span>
                             </li>
                             <li>
-                                <button type="submit" class="btn btn-danger no-radius"><span class="fa fa-google-plus fa-1x"></span></button>
+                                <span class="fa fa-google-plus fa-1x"></span>
                             </li>
                         </ul>
                     </div>
@@ -189,7 +208,20 @@
                 <div class="clearfix"></div>
                 <hr>
                 <div class="col-xs-12">
-                    <p>Copy right reserved © 2015</p>
+                    <ul class="list-inline footlist">
+                        <li>
+                            <a href="">Blog</a>
+                        </li>
+                        <li>
+                            <a href="">Legal</a>
+                        </li>
+                        <li>
+                            <a href="">Privacy Policy</a>
+                        </li>
+                        <li>
+                            <a href="">© 2010-2015 easyfunding</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
